Reduce complexity to easy-mode core (~1.5k LOC, 15 files)
Strips the platform down to its essentials: a 3-phase debate loop
driven by three LLM clients with 5-layer prompt context and a
minimal Swing/CLI front door.

Removed subsystems:
- Agentic task framework + DailyContextUpdateFunction
- Button/suite view, icons, category colors, ButtonStore
- Agentic UI (routines panel, operational feed)
- MCP host/client + tool executor + workflows
- Audit/logging (ApiRequestLog + Viewer, WorkflowStore,
  InitiativeStore, RelationshipStore, AttachmentLibraryStore)
- Setup/config dialogs
- Legacy MainV03_Monolith
- Streaming + stateful response IDs + file attachments in clients

Simplification rules applied:
- Blocking HTTP, full-history-per-call in every client
- No tool framework, no MCP
- Plain strings replace Freshness / ContextStatus enums
- Agent + Stakeholder profiles merged into a single Profiles record
- One JSON file per concern (config, profiles, org_context,
  sessions.jsonl); no generic Store abstraction
- MainGui is a single chat panel (no CardLayout, no tabs, no wiring)
- PDFBox dependency dropped

Final structure:
  Main.java / MainGui.java             front doors
  Maestro.java                         3-phase debate orchestrator
  PromptBuilder.java                   5-layer context assembly
  ConversationContext.java             cycle history + trim
  OrganizationContext.java             context store + JSON I/O
  ContextController.java               read/merge hook
  LlmClient + Anthropic/OpenAi/Gemini  non-streaming HTTP clients
  ChatMessage / Profiles / Config      small records + bootstrap
  SessionStore.java                    JSONL session append

https://claude.ai/code/session_01Qukcnrv57jqgpLRJHsHoAu